--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
+    "randomstring": "^1.2.1",
     "sass": "^1.42.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
